[package]
name = "cradle"
version = "0.1.0"
edition = "2021"

[features]
default = ["symphonia_metadata"]
symphonia_metadata = ["dep:symphonia"]
# Future possible features might include symphonia decoding, and alternative playback mechanisms

[lib]
name = "libcradle"
path = "libcradle/libcradle.rs"

[[bin]]
name = "cradle"
path = "cradle/cradle.rs"

[[bin]]
name = "cradle-server"
path = "misc-bin/server-bin.rs"

[[bin]]
name = "cradle-client"
path = "misc-bin/client-bin.rs"

[[bin]]
name = "playsong"
path = "misc-bin/playsong.rs"

[[bin]]
name = "devicemonitor"
path = "misc-bin/devicemonitor.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
axum = "0.6.1"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.0.32", features = ["derive"] }
gst = { package = "gstreamer", version = "0.19.4" }
gst-audio = { package = "gstreamer-audio", version = "0.19.4" }
glib = { version = "0.16.7", features = ["v2_66", "compiletests", "log", "log_macros"] }
anyhow = "1.0.68"
thiserror = "1.0.38"
tempfile = "3.3.0"
symphonia = { version = "0.5.1", optional = true }

