[package]
name = "cradle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libcradle"
path = "libcradle/libcradle.rs"

[[bin]]
name = "cradle-server"
path = "cradle/server.rs"

[[bin]]
name = "cradle-client"
path = "cradle/client.rs"

[[bin]]
name = "playsong"
path = "cradle/playsong.rs"

[[bin]]
name = "devicemonitor"
path = "cradle/devicemonitor.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
axum = "0.6.1"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.0.32", features = ["derive"] }
gstreamer = "0.19.4"
gstreamer-audio = "0.19.4"
glib = { version = "0.16.7", features = ["v2_64", "compiletests", "log", "log_macros"] }
